welcome.lessons.welcome.traversal.Snake.scala.code
def fini():Boolean = {
  var original = getDirection();
  while(getDirection() != Direction.NORTH){
    gauche();
  }
  var murhaut = estFaceMur();
  while(getDirection() != Direction.EAST){
    gauche();
  }
	if(murhaut && estFaceMur()){
    return true;
  }else{
  	while(getDirection() != original){
   	 gauche();
  	}
  	return false;
  }
}

override def run() {
  baisserBrosse();
  while(!fini()){
    if(!estFaceMur()){
      avance();
    }else{
      setY(get(Y)-1);
      gauche();
      gauche();
    }
  }
}